# maskdb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  docker-compose.yaml  requirements-devel.txt  requirements-docker.txt  requirements.txt  run-flask.py  run-flask.spec  run-gunicorn.py  run-gunicorn.spec  run-waitress.py  run-waitress.spec  setup.cfg  setup.py
maskdb/: __init__.py  forms.py  models.py  views.py
maskdb/templates/: base.html  flashed_messages.html  index.html  list.html  table.html
maskdb/translations/de/LC_MESSAGES/: messages.po
