
[metadata]
name = maskdb
version = 0.0.1
author = P. H.
author_email = maskdb.perfide@safersignup.de
description = Mask Database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/perfide/maskdb
keywords = jinja2, yaml
license = GNU Affero General Public License v3.0 only
license_files = LICENSE
classifiers =
  License :: OSI Approved :: GNU Affero General Public License v3.0 only
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = False
packages = find:
scripts = flask-debug.py

# [EOF]
